# cppExperiment

./: Ausnahmen.cpp  CMakeLists.txt  main.c
Day1/: Bubblesort.cpp  Buchstaben_und_Woerter.cpp  Maya_Zahlen.cpp  Palindrome.cpp  Quadratische_Funktionen.cpp  Referenzen.cpp  Speichern_und_Array.cpp  Taschenrechner.cpp  Verfahren_von_Heron.cpp
Day2/: Datum_Finden_Sie_die_Fehler.cpp  Erweiterte_Datumsklasse.cpp  Fahrzeuge.cpp  Flaschen.cpp  Polymorphie.cpp  Quadrate.cpp  Vererbung_und_Ueberschreibung.cpp  Virtuelle_Methoden.cpp
Day3/: 123.txt  Ausnahmen.cpp  CMakeLists.txt  Dateien_lesen_und_schreiben.cpp  Fibonacci_Folge.cpp  Liste_von_Koordinaten.cpp  Rekursion.cpp  Springerproblem.cpp  gtest_example.cpp  ncurses.cpp
Day4/: A1.cpp  A2.cpp
